# codehub

./: .env  .gitignore  Dockerfile  requirements.txt
alembic/: env.py
alembic/versions/: 1517221fd58b_add_search_text.py  57f0494bf390_add_repository_entity.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/application/interfaces/: ai_request_repository.py  dashboard_repository.py  file_repository.py  repository_repository.py  (+3 more)
app/core/: helpers.py  logging.py  password_helper.py  settings.py
app/schemas/: Pagination.py  file.py  repository.py
storage/repositories/47/: CMakeLists.txt  main_demo.c  tracker.c  tracker.h
storage/repositories/50/: Dockerfile  docker-compose.yml  pyproject.toml
storage/repositories/50/deployment/kubernetes/: deployment.yaml
storage/repositories/50/src/: config.py  main.py
storage/repositories/50/src/api/: dependencies.py
storage/repositories/50/src/api/middleware/: auth.py  rate_limit.py
storage/repositories/50/src/api/routes/: ingestion.py  query.py
storage/repositories/50/src/application/: indexing_service.py  retrieval_pipeline.py
storage/repositories/50/src/application/agents/: generator.py  grader.py  rewriter.py  supervisor.py
storage/repositories/50/src/domain/: entities.py  ports.py  value_objects.py
storage/repositories/50/src/evaluation/: ragas_evaluator.py
storage/repositories/50/src/infrastructure/chunking/: parent_document.py  semantic_chunker.py
storage/repositories/50/src/infrastructure/embeddings/: bge_m3.py
storage/repositories/50/src/infrastructure/graph/: neo4j_adapter.py
storage/repositories/50/src/infrastructure/llm/: openai_adapter.py
storage/repositories/50/src/infrastructure/rerankers/: bge_cross_encoder.py
storage/repositories/50/src/infrastructure/sparse/: elasticsearch_adapter.py
storage/repositories/50/src/infrastructure/vectorstores/: qdrant_adapter.py
storage/repositories/50/src/infrastructure/web_search/: tavily_adapter.py
(+298 files in other folders)
