[project]
name = "enterprise-rag"
version = "1.0.0"
description = "Production RAG with CRAG, Graph, Hybrid Search, and Agentic correction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "qdrant-client>=1.10.0",
    "elasticsearch>=8.0.0",
    "neo4j>=5.0.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "deepeval",
    "ragas",
    "datasets",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
